--- a/01-ec2-route53.yaml
+++ b/01-ec2-route53.yaml
@@ -1,5 +1,6 @@
+---
 - name: create ec2 and r53
-  host: local
+  hosts: local
   connection: local
   vars:
    ami_id: ami-09c813fb71547fc4f
@@ -10,11 +11,11 @@
    - mongodb
   tasks:
   - name: create ec2 and r53
-    amzon.aws.ec2_instances:
+    amazon.aws.ec2_instance:
       name: "{{ item }}"
       instance_type: "t3.micro"
       security_group: "sg_id"
-      image_id: "ami_id"
+      image_id: "{{ ami_id }}"
       tags:
         Name: "{{ item }}"
       loop: "{{ instances }}"
