--- a/01-ec2-route53.yaml
+++ b/01-ec2-route53.yaml
@@ -3,15 +3,12 @@
   connection: local
   vars:
     ami_id: ami-09c813fb71547fc4f
-    sg_id: sg-07c8acf3fa6b923fa # replace with your SG ID
-    zone_id: "Z0948150OFPSYTNVYZOY" # replace with your ID
-    domain_name: "daws86s.fun"
+    sg_id: sg-0bca0acc46e73e9a4 # replace with your SG ID
+    zone_id: "Z03705962F6GC0P7UF7E3" # replace with your ID
+    domain_name: "kaws86s.shop"
     # we can pass instances through command line using -e
-    # instances: 
-    # - mongodb
-    # - redis
-    # - mysql
-    # - rabbitmq
+    instance: 
+    - mongodb
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
@@ -21,43 +18,9 @@
       image_id: "{{ ami_id }}"
       tags:
         Name: "{{ item }}"
-    loop: "{{ instances }}"
+    loop: "{{ instance }}"
     register: ec2_output
 
-  # - name: print the ec2_output
-  #   ansible.builtin.debug:
-  #     msg: "{{ ec2_output }}"
-
-  # - name: print public_ip
-  #   ansible.builtin.debug: 
-  #     msg: "{{ item.instances[0].public_ip_address }}"
-  #   loop: "{{ ec2_output.results }}"
-
-  # - name: print private_ip
-  #   ansible.builtin.debug: 
-  #     msg: "{{ item.instances[0].private_ip_address }}"
-  #   loop: "{{ ec2_output.results }}"
-
-  - name: create route53 record
-    amazon.aws.route53:
-      state: present
-      zone: "{{ domain_name }}"
-      record: "{{ item.item }}.{{ domain_name }}" # mongodb.daws86s.fun
-      type: A
-      ttl: 1
-      value: "{{ item.instances[0].private_ip_address }}"
-      overwrite: true
-    loop: "{{ ec2_output.results }}"
-
-  # we are creating one record with public only for frontend
-  - name: create route53 record for frontend
-    amazon.aws.route53:
-      state: present
-      zone: "{{ domain_name }}"
-      record: "{{ domain_name }}" # daws86s.fun
-      type: A
-      ttl: 1
-      value: "{{ item.instances[0].public_ip_address }}"
-      overwrite: true
-    when: item.item == "frontend"
-    loop: "{{ ec2_output.results }}"
+  - name: print the ec2_output
+    ansible.builtin.debug:
+     msg: "{{ ec2_output }}"
