--- a/01-ec2-route53.yaml
+++ b/01-ec2-route53.yaml
@@ -34,19 +34,19 @@
   #   ansible.builtin.debug:
   #     msg: "{{ item.instances[0].private_ip_address }}"
   #   loop: "{{ ec2_output.results }}"
+
   - name: create route53 record
-  amazon.aws.route53 record: 
-   name: "{{ item }}"
-   state: present
-   zone: "{{ domain_name }}"
-   record: "{{ item.item }}.{{domain_name}}" #mogodb.kaws86s.shop
-   type: A
-   ttl: 1
-   value: "{{ item.instances[0].private_ip_address }}"
-   overwrite: true 
-   
-  loop: "{{ ec2_output.results }}"  
-  
+    amazon.aws.route53:
+      state: present
+      zone: "{{ domain_name }}"
+      record: "{{ item.item }}.{{ domain_name }}" # mongodb.kaws86s.shop
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      overwrite: true
+    loop: "{{ ec2_output.results }}"
+
+ 
 
   
    
