--- a/01-ec2-route53.yaml
+++ b/01-ec2-route53.yaml
@@ -9,6 +9,9 @@
     # we can pass instances through command line using -e
     instances: 
     - mongodb
+    - redis 
+    - mysql 
+    - rabbitMQ
    
   tasks:
   - name: create ec2 instance
