--- a/inventory.ini
+++ b/inventory.ini
@@ -3,3 +3,19 @@
 
 [local]
 localhost
+
+[all:vars]
+ansible_user: ec2-user 
+ansible_password: DevOps321
+
+[redis]
+redis.kaws86s.shop
+
+[mysql]
+mysql.kaws86s.shop
+
+[cart]
+cart.kaws86s.shop
+
+[rabbitMQ]
+rabbitMQ.kaws86s.shop
