--- a/inventory.ini
+++ b/inventory.ini
@@ -1,13 +1,3 @@
-[frontend]
-172.31.19.204
-
-[local]
-localhost
-
-[all:vars]
-ansible_user: ec2-user 
-ansible_password: DevOps321
-
 [redis]
 redis.kaws86s.shop
 
@@ -19,3 +9,16 @@ cart.kaws86s.shop
 
 [rabbitMQ]
 rabbitMQ.kaws86s.shop
+
+[frontend]
+172.31.19.204
+
+[local]
+localhost
+
+[all:vars]
+ansible_user=ec2-user 
+ansible_password=DevOps321
+
+[local:vars]
+NAME=from inventory
