--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -1,27 +1,26 @@
-- name: setup mongodb server 
-  host: mongodb 
+- name: setup mongodb server
+  hosts: mongodb
   become: yes
   tasks:
-  - name: copy mongo repo
+  - name: copy mongodb repo
     ansible.builtin.copy:
-     source: mongo.repo
-     dest: etc/yum.repos.d/mongo repo 
+      src: mongo.repo
+      dest: /etc/yum.repos.d/mongo.repo
 
-  - name: install mongodb server 
+  - name: install mongodb server
     ansible.builtin.package:
       name: mongodb-org
-      state: present 
-
-  - name: allow remote connection 
+      state: present
+      
+  - name: allow remote connections
     ansible.builtin.replace:
       path: /etc/mongod.conf
-      regexec: '127.0.0.1'
+      regexp: '127.0.0.1'
       replace: '0.0.0.0'
-
-  - name: start and enable server 
+  
+  - name: start and enable service
     ansible.builtin.service:
-      name: mongod 
-      state: started 
+      name: mongod
+      state: started
       enabled: yes
-     
 
