--- a/inventory.ini
+++ b/inventory.ini
@@ -10,8 +10,8 @@ mysql.kaws86s.shop
 [cart]
 cart.kaws86s.shop
 
-[rabbitMQ]
-rabbitMQ.kaws86s.shop
+[rabbitmq]
+rabbitmq.kaws86s.shop
 
 [frontend]
 172.31.19.204
