--- a/inventory.ini
+++ b/inventory.ini
@@ -19,6 +19,17 @@ rabbitmq.kaws86s.shop
 [local]
 localhost
 
+[catalogue]
+catalogue.kaws86s.shop
+
+[user]
+user.kaws86s.shop
+
+[cart]
+cart.kaws86s.shop
+
+
+
 [all:vars]
 ansible_user=ec2-user 
 ansible_password=DevOps321
