--- a/01-ec2-route53.yaml
+++ b/01-ec2-route53.yaml
@@ -8,10 +8,10 @@
     domain_name: "kaws86s.shop"
     # we can pass instances through command line using -e
     instances: 
-    - mongodb
-    - redis 
-    - mysql 
-    - rabbitMQ
+    # - mongodb
+    # - redis 
+    # - mysql 
+    # - rabbitMQ
    
   tasks:
   - name: create ec2 instance
