--- a/inventory.ini
+++ b/inventory.ini
@@ -28,7 +28,11 @@ user.kaws86s.shop
 [cart]
 cart.kaws86s.shop
 
+[shipping]
+shipping.kaws86s.shop
 
+[payment]
+payment.kaws86s.shop
 
 [all:vars]
 ansible_user=ec2-user 
