--- a/payment.service
+++ b/payment.service
@@ -5,11 +5,11 @@ Description=Payment Service
 User=root
 WorkingDirectory=/app
 // highlight-start
-Environment=CART_HOST=cart.daws86s.fun
+Environment=CART_HOST=cart.kaws86s.shop
 Environment=CART_PORT=8080
-Environment=USER_HOST=user.daws86s.fun
+Environment=USER_HOST=user.kaws86s.shop
 Environment=USER_PORT=8080
-Environment=AMQP_HOST=rabbitmq.daws86s.fun
+Environment=AMQP_HOST=rabbitmq.kaws86s.shop
 // highlight-end
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=roboshop123
